--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,8 @@
               }
             ],
             "styles": [
+              "node_modules/devextreme/dist/css/dx.light.css",
+
               "src/styles.css"
             ],
             "scripts": []
