--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "devextreme": "^24.1.5",
     "devextreme-angular": "^24.1.5",
     "ngx-bootstrap": "^18.0.2",
+    "ngx-sweetalert2": "^0.2.7",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -34,11 +36,11 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
+    "karma": "^1.3.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-jasmine": "^4.0.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "typescript": "~5.5.2"
   }
 }
